[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/IK/Joint.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/IK/RotationTestScene.gd" type="Script" id=2]
[ext_resource path="res://debug_cam.gd" type="Script" id=3]

[sub_resource type="SphereMesh" id=2]
radius = 0.1
height = 0.2

[sub_resource type="QuadMesh" id=5]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.321569, 0.321569, 0.321569, 1 )

[node name="IKTestScene" type="Spatial"]
script = ExtResource( 2 )

[node name="Root" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.27233, 0, 0, 0, 0.27233, 0, 0, 0, 0.27233, 0, 0, 0 )

[node name="Joint1" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.68124, 1.88984, 1.08783 )

[node name="Joint2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.158186, 1.88984, 2.97185 )

[node name="Joint3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.93014, 1.88984, 1.15761 )

[node name="Pole" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22989, -0.181781, -3.34367 )

[node name="MeshInstance" type="MeshInstance" parent="Pole"]
mesh = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.74449 )
current = true
script = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, -9.50533e-08, 2.17457, 4.15491e-15 )
shadow_enabled = true

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 1.69863e-07, -3.88601, -7.42494e-15 )
mesh = SubResource( 5 )
skeleton = NodePath("")
material/0 = SubResource( 6 )
